fix: Align icons

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 img {
-  height: 10rem;
+  height: 14rem;
   aspect-ratio: 1 / 1;
 }
 
@@ -25,6 +25,13 @@ a {
 
 i {
   margin-right: 0.6rem;
+  font-size: 1.1rem;
+  width: 1.2rem;
+}
+
+#info > div {
+  display: flex;
+  flex-direction: column;
 }
 
 .location {
@@ -161,7 +168,7 @@ ul {
   }
 
   #info h1 {
-    font-size: 1.4rem;
+    font-size: 2rem;
     margin: 0;
   }
 
